fixed social icons alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -154,6 +154,7 @@ header {
         .socialIcons {
             display: flex;
             flex-direction: column;
+            align-items: center;
             position: fixed;
             bottom: 10%;
             right: 5%;
